minor changes - fix bleed edge

--- a/src/Css/articles.css
+++ b/src/Css/articles.css
@@ -82,6 +82,7 @@
     flex-direction: column;
     margin: 0;
     gap: 2vw;
+    align-items: center;
   }
 
   .all-articles {
